[gd_scene load_steps=2 format=3 uid="uid://cbc06i20jj4b"]

[ext_resource type="Script" uid="uid://dh020cpt58t82" path="res://addons/yandex_games_sdk/panel.gd" id="1_2gsam"]

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2gsam")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Enable" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable (Yandex Games SDK)"

[node name="AutoInit" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto Init"

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Custom head include:"

[node name="HeadInclude" type="TextEdit" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="toggled" from="ScrollContainer/VBoxContainer/Enable" to="." method="_on_settings_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/AutoInit" to="." method="_on_settings_toggled"]
[connection signal="text_changed" from="ScrollContainer/VBoxContainer/HeadInclude" to="." method="_on_head_include_text_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
